ML finish assignment 2

--- a/ML/assignment2/NadeuFerranJordi_Lab_Assignment2.ipynb
+++ b/ML/assignment2/NadeuFerranJordi_Lab_Assignment2.ipynb
@@ -45,7 +45,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
         "id": "H5yWyk8vAORO"
       },
@@ -109,7 +109,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 17,
       "metadata": {
         "id": "ecID84w6X1MM"
       },
@@ -202,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 18,
       "metadata": {
         "id": "mkza5kh9D0-Y"
       },
@@ -240,7 +240,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 19,
       "metadata": {
         "id": "ALD5fEbwEauj"
       },
@@ -314,7 +314,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 20,
       "metadata": {
         "id": "8-qDslYzHBL9"
       },
@@ -371,7 +371,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 21,
       "metadata": {
         "id": "CeKM1X3TJ2OV"
       },
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 22,
       "metadata": {
         "id": "4t_hPc_UK17J"
       },
@@ -468,7 +468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 23,
       "metadata": {
         "id": "vd3DpJN2LG-t"
       },
@@ -2300,7 +2300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 24,
       "metadata": {
         "id": "-epFJr4AtZW3"
       },
@@ -2323,7 +2323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 25,
       "metadata": {
         "id": "dew-RUlPvIKB"
       },
@@ -4092,7 +4092,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 26,
       "metadata": {
         "id": "PiN-hSoywUs2"
       },
@@ -4140,7 +4140,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {
         "id": "1cJmMfLHYOiY"
       },
@@ -4162,7 +4162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 28,
       "metadata": {
         "id": "1nvL2_s-YVbZ"
       },
@@ -4211,7 +4211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 29,
       "metadata": {
         "id": "BFVt4ulNYhiI"
       },
@@ -4229,10 +4229,10 @@
             "2      0.8               (butter)\n",
             "3      0.6                 (beer)\n",
             "4      0.6               (cheese)\n",
-            "5      0.6          (bread, milk)\n",
-            "6      0.6         (butter, milk)\n",
+            "5      0.6          (milk, bread)\n",
+            "6      0.6         (milk, butter)\n",
             "7      0.6        (bread, butter)\n",
-            "8      0.6  (butter, bread, milk)\n"
+            "8      0.6  (milk, bread, butter)\n"
           ]
         }
       ],
@@ -4257,7 +4257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 30,
       "metadata": {
         "id": "UkvUuEEQY33n"
       },
@@ -4270,18 +4270,18 @@
             "Association Rules:\n",
             "\n",
             "        antecedents      consequents  support  confidence      lift\n",
-            "0           (bread)           (milk)      0.6        1.00  1.666667\n",
-            "1            (milk)          (bread)      0.6        1.00  1.666667\n",
-            "2          (butter)           (milk)      0.6        0.75  1.250000\n",
-            "3            (milk)         (butter)      0.6        1.00  1.250000\n",
+            "0            (milk)          (bread)      0.6        1.00  1.666667\n",
+            "1           (bread)           (milk)      0.6        1.00  1.666667\n",
+            "2            (milk)         (butter)      0.6        1.00  1.250000\n",
+            "3          (butter)           (milk)      0.6        0.75  1.250000\n",
             "4           (bread)         (butter)      0.6        1.00  1.250000\n",
             "5          (butter)          (bread)      0.6        0.75  1.250000\n",
-            "6   (bread, butter)           (milk)      0.6        1.00  1.666667\n",
-            "7    (butter, milk)          (bread)      0.6        1.00  1.666667\n",
-            "8     (bread, milk)         (butter)      0.6        1.00  1.250000\n",
-            "9          (butter)    (bread, milk)      0.6        0.75  1.250000\n",
-            "10          (bread)   (butter, milk)      0.6        1.00  1.666667\n",
-            "11           (milk)  (bread, butter)      0.6        1.00  1.666667\n"
+            "6     (milk, bread)         (butter)      0.6        1.00  1.250000\n",
+            "7    (milk, butter)          (bread)      0.6        1.00  1.666667\n",
+            "8   (bread, butter)           (milk)      0.6        1.00  1.666667\n",
+            "9            (milk)  (bread, butter)      0.6        1.00  1.666667\n",
+            "10          (bread)   (milk, butter)      0.6        1.00  1.666667\n",
+            "11         (butter)    (milk, bread)      0.6        0.75  1.250000\n"
           ]
         }
       ],
